@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclThread.h,v 1.16 2004/07/21 20:53:43 vasiljevic Exp $
+ * RCS: @(#) $Id: tclThread.h,v 1.17 2004/08/02 18:39:17 vasiljevic Exp $
  * ---------------------------------------------------------------------------
  */
 
@@ -43,15 +43,20 @@
  * Only thread:: and tpool:: are handled here.
  * The shared variable is more complicated.
  * Look into the threadSvCmd.h for more info.
- * The reason for this is that eralier versions
+ * The reason for this is that earlier versions
  * of AOLserver do not handle namespaced Tcl
  * commands properly.
  */
 
 #ifdef NS_AOLSERVER
 # include <ns.h>
-# define THNS "thread_"
-# define TPNS "tpool_"
+# if (defined NS_MAJOR_VERSION) && (NS_MAJOR_VERSION >= 4)
+#  define THNS "thread::"
+#  define TPNS "tpool::"
+# else
+#  define THNS "thread_"
+#  define TPNS "tpool_"
+# endif
 #else
 # define THNS "thread::"
 # define TPNS "tpool::"
